src/test/ui/existential_types/no_inferrable_concrete_type.stderr
error: could not find defining uses
  --> $DIR/no_inferrable_concrete_type.rs:6:1
   |
LL | existential type Foo: Copy;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

